# python_flask_task_smash

./: .env  .gitignore  admindb.001  admindb.py  app.001  app.002  app.py  codetest.py  createdb.py  pyproject.toml  requirements.txt
instance/: database.001  database.db
static/: styles.css  styles.css.map  styles.scss
templates/: index.html
