[tool.poetry]
name = "pages"
version = "0.1.0"
description = "Primeira aplicação teste poetry"
authors = ["Aristides Lima <aristides.lima@gmail.com>"]
license = "Free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-scss = "^0.5"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
